   amounts of memory for many medium and large databases---20-30% on
   JHM.  The table used to uniquify strings is discarded after the
   database is loaded, but depending on the OS memory allocation
   strategy, the full savings may not be apparent through tools like
   "ps" and "top".  Unused process space simply will be swapped out by
   the OS over time.
-- MOO code operations that manipulate lists now avoid copying the old
   list value in some situations.  For example, `l[a] = b' will be
   significantly faster for long lists, if `l' is the only reference
   to the underlying list. This optimization can only be done outside
   of error-handling expressions and `try' statements.
-- The server now declares some C functions as "static inline".  If
   your C compiler doesn't understand this gcc-style declaration, add
   "-Dinline=" to CFLAGS in the Makefile.  (This gross requirement
   will go away once we upgrade to modern autoconf scripts.)
-- There's primitive support for the 32-bit memory model for reducing
   memory usage on the DEC Alpha using DEC cc.  See
   SHORT_ALPHA_VAR_POINTERS in structures.h.
**** Critical changes significant to server hackers follow:
-- All C source code was processed with GNU indent using the settings
   in the file `.indent.pro'.  This is an attempt to normalize coding
   style.  This also breaks patch files against 1.8.0p6.
-- The Memory_Type passed to mymalloc is now more significant.  In
   particular, use of M_STRING as the typing for `void *' will break
   your code, due to poor interactions with the new reference counting
   system and alignment restrictions.  Only use M_STRING for strings.
   To allocate a new kind of storage with mymalloc(), add a new type
   name to the Memory_Type enum in storage.h.  (You can currently get
   away with reusing a type like M_VM, but this may break eventually.)
-- Server hackers should read README.rX for more information on
   changes to server internals.